--- a/src/views/admin/register.ejs
+++ b/src/views/admin/register.ejs
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="LR/style.css">
-    <title>Register</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Organisation Register</title>
 </head>
 
 <body>
     <div class="container">
         <div class="login-label">
-            <h1>Register</h1>
+            <h1>Organisation Register</h1>
         </div>
         <form action="/admin/register" method="POST">
             <div id="email" class="form-element">
@@ -21,15 +21,14 @@
             <div id="password" class="form-element">
                 <input required="true" type="password" placeholder="Enter Password" name="password" class="field">
             </div>
-            <div id="cpassword" class="form-element">
-                <input required="true" type="password" placeholder="Enter Password again" name="cpassword"
-                    class="field">
+            <div id="org-name" class="form-element">
+                <input required="true" type="string" placeholder="Enter Organisation Name" name="orgName" class="field">
             </div>
             <div class="form-element">
                 <input class="submit-btn" type="submit" value="Register">
             </div>
         </form>
-        <a href="/login" id="l">Login</a>
+        <a href="/admin/login" id="l">Login</a>
     </div>
 </body>
 
